Stylized app search, Clipboard, Power menu

--- a/.config/hypr/keybindings-help.html
+++ b/.config/hypr/keybindings-help.html
@@ -296,7 +296,7 @@
         <ul>
           <li>
             <div class="kbd-wrap">
-              <kbd>SUPER</kbd><span class="kbd-plus">+</span><kbd>D</kbd>
+              <kbd>SUPER</kbd><span class="kbd-plus">+</span><kbd>A</kbd>
             </div>
             <div class="desc">App search (wofi)</div>
           </li>
